--- a/FirstReactApp/src/components/Interests.css
+++ b/FirstReactApp/src/components/Interests.css
@@ -1,12 +1,13 @@
 .interests-container {
   background-color: #1a1b21;
-  padding: 1em 2.5em;
+  padding: 1em 2.5em 2em 2.5em;
 }
 
 .interests {
   font-size: 1rem;
   font-weight: 700;
   color: #f5f5f5;
+  margin-bottom: 0.2em;
 }
 
 .interests-text {
